final etch-a-sketch. Probably. Enabled download, fixed background, added all info

--- a/index.html
+++ b/index.html
@@ -38,18 +38,26 @@
         <div class="canvas">
             <canvas id="canvas">
             </canvas>
+
         </div>
         <div class="rightSidebar">
             <h1>Change size of the brush with numbers on your keyboard</h1>
             <p>Smallest brush size is <span>1</span></p>
             <p>...while the largest is <span>0</span></p>
-            <ul class="sizes">
-                <li></li>
-            </ul>
+            <h1>WARNING</h1>
+            <p>Changing the size or color of your brushes will pause the drawing for a short moment, so if you don't want any breaks in your lines, make sure to stop the mouse before changing :-)</p>
+            <div class="reset">
+            <h1>To RESET Canvas</h1>
+            <h1>Press <span>f5</span> lol</h1>
+            </div>
+
         </div>
     </div>
 
     <footer>
+        
+        <button id="download">Click to Download My Etch-a-sketch</button>
+        <p> Or Press <span> G</span></p>
 
     </footer> 
    
