hover for button lol

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <footer>
         
-        <button id="download">Click to Download My Etch-a-sketch</button>
+        <button id="download">Click to Download your Etch-a-sketch</button>
         <p> Or Press <span> G</span></p>
 
     </footer> 
